--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,31 @@ h1 {
 h3 {
   font: italic 400 30px/40px "Gentium Book Basic", serif;
 }
+
+.NavLinks {
+  list-style: none;
+  padding-left: 0;
+}
+
+.NavLinks li {
+  display: inline-block;
+  padding: 0 15px;
+}
+
+.NavLinks a {
+  color: #02b1ff;
+  text-decoration: none;
+  font-size: 25px;
+}
+
+.NavLinks a.active {
+  color: #F79824;
+}
+
+.NavLinks a.active:hover {
+  color: #FDCA40;
+}
+
+.NavLinks a:hover {
+  color: #0184be;
+} 
