--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One%7CGentium+Book+Basic:400,400i');
+@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One|Gentium+Book+Basic:400,400i');
 
 .App {
   text-align: center;
@@ -21,30 +21,30 @@ h3 {
   font: italic 400 30px/40px "Gentium Book Basic", serif;
 }
 
-.NavLinks {
+.navLinks {
   list-style: none;
   padding-left: 0;
 }
 
-.NavLinks li {
+.navLinks li {
   display: inline-block;
   padding: 0 15px;
 }
 
-.NavLinks a {
+.navLinks a {
   color: #02b1ff;
   text-decoration: none;
   font-size: 25px;
 }
 
-.NavLinks a.active {
+.navLinks a.active {
   color: #F79824;
 }
 
-.NavLinks a.active:hover {
+.navLinks a.active:hover {
   color: #FDCA40;
 }
 
-.NavLinks a:hover {
+.navLinks a:hover {
   color: #0184be;
-} 
+}
